--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,15 @@
-#root {
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+/* #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
-}
+} */
 
 .logo {
   height: 6em;
@@ -33,10 +39,36 @@
   }
 }
 
-.card {
+/* .card {
   padding: 2em;
-}
+} */
 
 .read-the-docs {
   color: #888;
+}
+
+.login-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  /* border: 1px solid red; */
+  width: 100vw;
+  /* background: url("./assets/img/10.jpg") no-repeat center;
+  background-size: cover; */
+  background: #fff;
+}
+
+.glass {
+  /* From https://css.glass */
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 16px;
+  /* box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1); */
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  -webkit-box-shadow: 0px 5px 10px 2px #939292;;
+  -moz-box-shadow: 0px 5px 10px 2px #939292;;
+  box-shadow: 0px 5px 10px 2px #939292;;
+  padding: 16px;
 }
