--- a/src/App.css
+++ b/src/App.css
@@ -50,7 +50,7 @@
 
 .login-wrapper {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   height: 100vh;
   /* border: 1px solid red; */
@@ -62,14 +62,42 @@
 
 .glass {
   /* From https://css.glass */
-  background: rgba(255, 255, 255, 0.2);
-  border-radius: 16px;
+  /* background: rgba(255, 255, 255, 0.2);
+  border-radius: 16px; */
   /* box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1); */
-  backdrop-filter: blur(5px);
+  /* backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(5px);
   border: 1px solid rgba(255, 255, 255, 0.3);
   -webkit-box-shadow: 0px 5px 10px 2px #939292;;
   -moz-box-shadow: 0px 5px 10px 2px #939292;;
   box-shadow: 0px 5px 10px 2px #939292;;
-  padding: 16px;
+  padding: 16px; */
+  /* margin: auto; */
+
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: linear-gradient(to right, #9796f0, #6C63FF);
+    /* background: repeating-linear-gradient(45deg, #6C63FF, transparent 100px); */
+    border-radius: 50px 0px 0px 50px;
+}
+
+@media only screen and (max-width: 1669px) {
+  .loginImage {
+    width: 568px;
+  }
+}
+
+@media only screen and (max-width: 1330px) {
+  .loginImage {
+    width: 468px;
+  }
+}
+
+@media only screen and (max-width: 1179px) {
+  .loginImage {
+    width: 390px;
+  }
 }
