--- a/src/App.css
+++ b/src/App.css
@@ -5,12 +5,13 @@
   /* border: 1px solid blue; */
 }
 
-/* #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+#root {
+  /* max-width: 1280px; */
+  /* margin: 0 auto; */
+  /* padding: 2rem; */
   text-align: center;
-} */
+  width: 100%
+}
 
 .logo {
   height: 6em;
