--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,8 @@
   /* margin: 0 auto; */
   /* padding: 2rem; */
   text-align: center;
-  width: 100%
+  width: 100%;
+  height: 100vh
 }
 
 .logo {
