--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
   /* padding: 2rem; */
   text-align: center;
   width: 100%;
-  height: 100vh
+  height: 100vh;
 }
 
 .logo {
@@ -76,14 +76,14 @@
   padding: 16px; */
   /* margin: auto; */
 
-    height: 100vh;
-    width: 100vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-image: linear-gradient(to right, #9796f0, #6C63FF);
-    /* background: repeating-linear-gradient(45deg, #6C63FF, transparent 100px); */
-    border-radius: 50px 0px 0px 50px;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: linear-gradient(to right, #9796f0, #6c63ff);
+  /* background: repeating-linear-gradient(45deg, #6C63FF, transparent 100px); */
+  border-radius: 50px 0px 0px 50px;
 }
 
 @media only screen and (max-width: 1669px) {
@@ -113,4 +113,43 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+
+
+.not-found-page {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+.btn1 {
+  text-align: center;
+}
+.not-found-text {
+  text-align: center;
+  font-size: 20px;
+  margin-bottom: 40px;
+}
+.not-found-error-text {
+  text-align: center;
+  padding: 20px;
+}
+.not-found-error {
+  font-size: 1.5rem;
+  text-decoration: none;
+  padding: 15px;
+  background: #6200ee;
+  color: #fff;
+  border-radius: 10px;
+}
+
+.not-found-bg {
+  padding: 0;
+  margin: 0;
+  background: #f0f0f0;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  font-family: "Roboto", sans-serif;
 }
