--- a/src/App.css
+++ b/src/App.css
@@ -163,3 +163,15 @@
   flex-direction: column;
   font-family: "Roboto", sans-serif;
 }
+
+.main-table-1 {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+
+.main-table-2 {
+  display: flex;
+  margin: 0px 20px 0px 20px
+}
