--- a/src/App.css
+++ b/src/App.css
@@ -170,8 +170,11 @@
   margin-bottom: 20px;
 }
 
-
 .main-table-2 {
   display: flex;
   margin: 0px 20px 0px 20px
+}
+
+.logo-div:hover {
+  cursor: pointer;
 }
