--- a/src/App.css
+++ b/src/App.css
@@ -52,66 +52,40 @@
 
 .login-wrapper {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 100vh;
-  /* border: 1px solid red; */
-  width: 100vw;
-  /* background: url("./assets/img/10.jpg") no-repeat center;
-  background-size: cover; */
-  background: #fff;
-}
-
-.glass {
-  /* From https://css.glass */
-  /* background: rgba(255, 255, 255, 0.2);
-  border-radius: 16px; */
-  /* box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1); */
-  /* backdrop-filter: blur(5px);
-  -webkit-backdrop-filter: blur(5px);
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  -webkit-box-shadow: 0px 5px 10px 2px #939292;;
-  -moz-box-shadow: 0px 5px 10px 2px #939292;;
-  box-shadow: 0px 5px 10px 2px #939292;;
-  padding: 16px; */
-  /* margin: auto; */
-
-  height: 100vh;
-  width: 100vw;
-  display: flex;
   justify-content: center;
   align-items: center;
-  background-image: linear-gradient(to right, #9796f0, #6c63ff);
-  /* background: repeating-linear-gradient(45deg, #6C63FF, transparent 100px); */
-  border-radius: 50px 0px 0px 50px;
+  height: 100vh;
+  overflow: hidden;
 }
 
-@media only screen and (max-width: 1669px) {
-  .loginImage {
-    width: 568px;
-  }
+.login-wrapper::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: url('./assets/images/abc-login-wallpaper.jpg') center/cover no-repeat; 
+  background-size: cover;
+  filter: blur(15px);
+  z-index: -1; 
 }
 
-@media only screen and (max-width: 1330px) {
-  .loginImage {
-    width: 468px;
-  }
+
+.glass {
+ margin-left: 10%;
 }
 
-@media only screen and (max-width: 1179px) {
-  .loginImage {
-    width: 390px;
-  }
-}
+.inner-image-div {
+  width: 80%;
+  height: 700px;
+  box-sizing: border-box;
+  margin: auto;
+  border-radius: 80px;
+  
+  backdrop-filter: none; 
 
-@media only screen and (max-width: 1125px) {
-  .loginImage {
-    display: none;
-  }
-  .glass {
-    border-radius: 0px;
-    justify-content: flex-end;
-  }
+  /* transform: translate(-50%, -50%); */
 }
 
 .loginBtn:hover {
