--- a/src/App.css
+++ b/src/App.css
@@ -65,15 +65,15 @@
   right: 0;
   bottom: 0;
   left: 0;
-  background: url('./assets/images/abc-login-wallpaper.jpg') center/cover no-repeat; 
+  background: url("./assets/images/abc-login-wallpaper.jpg") center/cover
+    no-repeat;
   background-size: cover;
   filter: blur(15px);
-  z-index: -1; 
+  z-index: -1;
 }
 
-
 .glass {
- margin-left: 10%;
+  margin-left: 10%;
 }
 
 .inner-image-div {
@@ -82,8 +82,8 @@
   box-sizing: border-box;
   margin: auto;
   border-radius: 80px;
-  
-  backdrop-filter: none; 
+
+  backdrop-filter: none;
 
   /* transform: translate(-50%, -50%); */
 }
@@ -409,9 +409,9 @@
 /* Moving BACKGROUND */
 
 .content-container {
-  -webkit-box-shadow: 0px 5px 14px -5px rgba(34, 60, 80, 0.6);
-  -moz-box-shadow: 0px 5px 14px -5px rgba(34, 60, 80, 0.6);
-  box-shadow: 0px 5px 14px -5px rgba(34, 60, 80, 0.6);
+  -webkit-box-shadow: 0px 5px 14px -5px rgba(75, 81, 85, 0.6);
+  -moz-box-shadow: 0px 5px 14px -5px rgba(75, 81, 85, 0.6);
+  box-shadow: 0px 5px 14px -5px rgba(75, 81, 85, 0.6);
   text-align: center;
   background: white;
   position: relative;
@@ -419,4 +419,10 @@
   margin: 0 48px;
   border-bottom-left-radius: 8px;
   border-bottom-right-radius: 8px;
+}
+
+.bg-image {
+  background-image: url("./assets/images/8.png");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
