--- a/src/App.css
+++ b/src/App.css
@@ -419,6 +419,8 @@
   margin: 0 48px;
   border-bottom-left-radius: 8px;
   border-bottom-right-radius: 8px;
+  height: 87vh;
+  overflow-y: auto;
 }
 
 .bg-image {
